--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ a:hover, a:active {
     overflow-x: scroll;
     padding: 30px;
     margin: 0;
-    background: #9a28d7;
+    background: #00572e;
     transition: all 0.35s;
 }
 
@@ -490,7 +490,7 @@ a:hover, a:active {
 # Homepage - Info Section
 --------------------------------------------------------------*/
 .homepage-info-section {
-    padding: 120px 0;
+    /* padding: 120px 0; */
     background: #fff;
 }
 
