--- a/style.css
+++ b/style.css
@@ -2175,3 +2175,22 @@ ul.tabs-nav .tab-nav.active {
 .back-to-top path {
     fill: #fff;
 }
+
+
+/* parterns section */
+
+.partner-image img{
+    max-width: 80%;
+    max-height: 80%;
+    align-items: center;
+}
+
+.prtner-card{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    justify-content: center;
+    align-items: center;
+}
+.prtner-img:hover{
+    transform: scale(1.2);
+    transition: transform .5s;
+}
